--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   onboarding: ^3.1.0
 
   flutter_screenutil: ^5.3.1
+  dropdown_button2: ^1.2.2
 
 dev_dependencies:
   flutter_test:
