--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,27 +5,12 @@ description: A new Flutter project.
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
-# The following defines the version and build number for your application.
-# A version number is three numbers separated by dots, like 1.2.43
-# followed by an optional build number separated by a +.
-# Both the version and the builder number may be overridden in flutter
-# build by specifying --build-name and --build-number, respectively.
-# In Android, build-name is used as versionName while build-number used as versionCode.
-# Read more about Android versioning at https://developer.android.com/studio/publish/versioning
-# In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
-# Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 version: 1.0.0+1
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
 
-# Dependencies specify other packages that your package needs in order to work.
-# To automatically upgrade your package dependencies to the latest versions
-# consider running `flutter pub upgrade --major-versions`. Alternatively,
-# dependencies can be manually updated by changing the version numbers below to
-# the latest version available on pub.dev. To see which dependencies have newer
-# versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
     sdk: flutter
@@ -39,8 +24,16 @@ dependencies:
   intl: ^0.17.0
   onboarding: ^3.1.0
 
+  record_mp3: ^3.0.0
+  audioplayers: ^0.20.1
+  path:
+  permission_handler: ^10.0.0
+  path_provider: ^2.0.11
+
+
+
   flutter_screenutil: ^5.3.1
-  dropdown_button2: ^1.2.2
+  dropdown_button2: ^1.7.0
 
   change_app_package_name: ^1.1.0
   cloud_firestore: ^3.3.0
@@ -54,7 +47,17 @@ dependencies:
 
   random_string: ^2.3.1
 
+  get: ^4.3.8
+
   provider: ^6.0.3
+
+  http:
+
+  flutter_audio_recorder2: ^0.0.2
+
+  sizer: ^2.0.15
+
+
 
 
 
