--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,7 +86,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
-  # To add assets to your application, add an assets section, like this:
+  # To add assets to your applic1ation, add an assets section, like this:
   assets:
     - assets/images/
     - assets/lottie/
