--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -58,6 +58,7 @@ dependencies:
   qr_flutter: ^4.0.0
   share_plus: ^4.5.3
   screenshot: ^1.2.3
+  expansion_widget: ^0.0.3
 
 
   http:
@@ -92,8 +93,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-    - assets/lottie/
     - assets/images/icons/
+    - assets/lottie/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
@@ -107,18 +108,9 @@ flutter:
   # list giving the asset and other descriptors for the font. For
   # example:
   fonts:
-    - family: Bahnschrift
+    - family: BAHNSCHRIFT
       fonts:
         - asset: assets/fonts/BAHNSCHRIFT.TTF
-          weight: 700
-        - asset: assets/fonts/BAHNSCHRIFT1.TTF
-          weight: 600
-        - asset: assets/fonts/BAHNSCHRIFT2.TTF
-          weight: 400
-        - asset: assets/fonts/BAHNSCHRIFT3.TTF
-          weight: 500
-        - asset: assets/fonts/BAHNSCHRIFT4.TTF
-          weight: 300
 
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
