--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -5,7 +5,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
    <application
-        android:label="walkie_talkie_360"
+        android:label="Walkie Talkie 360"
         android:name="${applicationName}"
         android:icon="@mipmap/launcher_icon">
 
