--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,9 +56,11 @@ dependencies:
   just_audio: ^0.9.28
   audioplayers: ^1.0.1
   qr_flutter: ^4.0.0
+  qr_code_scanner: ^1.0.1
   share_plus: ^4.5.3
   screenshot: ^1.2.3
   expansion_widget: ^0.0.3
+  flutter_countdown_timer: ^4.1.0
 
 
   http:
