--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,6 +61,7 @@ dependencies:
   screenshot: ^1.2.3
   expansion_widget: ^0.0.3
   flutter_countdown_timer: ^4.1.0
+  volume_controller: ^2.0.6
 
 
   http:
