--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,14 +62,10 @@ dependencies:
   expansion_widget: ^0.0.3
   flutter_countdown_timer: ^4.1.0
   volume_controller: ^2.0.6
-
-
+  jiffy: ^5.0.0
+  file: ^6.1.4
   http:
   sizer: ^2.0.15
-
-
-
-
 
 dev_dependencies:
   flutter_test:
